--- a/themes/jms_molla/assets/scss/elements/_products.scss
+++ b/themes/jms_molla/assets/scss/elements/_products.scss
@@ -846,12 +846,28 @@
 			bottom: 0;
 		}
 	}
+	.category-name{
+		color: #ccc;
+		margin-bottom: .4rem;
+		&:hover{
+			color: #666;
+		}
+	}
 	.product-preview{
 		overflow: hidden;
 	}
-	.product-buttons .btn-icon::before{
-		background-color: #fff;
-		border-color: #fff;
+	.product-title{
+		font-size: 1.4rem;
+		font-weight: 300;
+		letter-spacing: 0;
+		margin-bottom: 1.5rem;
+	}
+	.content_price{
+		span.price{
+			font-size: 1.4rem;
+			display: block;
+			margin-bottom: .3rem;
+		}
 	}
 	.product-info{
 		padding: 1.6rem 0 0 0;
