--- a/themes/jms_molla/assets/css/custom.css
+++ b/themes/jms_molla/assets/css/custom.css
@@ -5090,33 +5090,33 @@ p {
 
 /*--------------------- 3.Footer -------------------- */
 /* Footer */
-#footer.footer-1 .html-1 .widget-about-info {
-  margin-top: 4rem;
-  font-weight: 400;
-  font-size: 2rem;
-  letter-spacing: -.01em;
-  line-height: 1.3; }
+#footer.footer-1 .html-1, #footer.footer-5 .html-1 {
+  display: block; }
+  #footer.footer-1 .html-1 .widget-about-info, #footer.footer-5 .html-1 .widget-about-info {
+    margin-top: 4rem;
+    font-weight: 400;
+    font-size: 2rem;
+    letter-spacing: -.01em;
+    line-height: 1.3; }
+  #footer.footer-1 .html-1 .widget-about-title, #footer.footer-5 .html-1 .widget-about-title {
+    display: block;
+    font-weight: 300;
+    font-size: 1.3rem;
+    color: #333333;
+    letter-spacing: 0;
+    margin-bottom: .4rem; }
+  #footer.footer-1 .html-1 .footer-payments, #footer.footer-5 .html-1 .footer-payments {
+    margin-top: .6rem; }
 
-#footer.footer-1 .html-1 .widget-about-title {
-  display: block;
-  font-weight: 300;
-  font-size: 1.3rem;
-  color: #333333;
-  letter-spacing: 0;
-  margin-bottom: .4rem; }
-
-#footer.footer-1 .html-1 .footer-payments {
-  margin-top: .6rem; }
-
-#footer.footer-1 .social-icon {
+#footer.footer-1 .social-icon, #footer.footer-5 .social-icon {
   width: auto;
   height: auto;
   border: none; }
 
-#footer.footer-1 .html-1 {
+#footer.footer-1 .html-1, #footer.footer-5 .html-1 {
   display: block; }
 
-#footer.footer-1 .html-2 {
+#footer.footer-1 .html-2, #footer.footer-5 .html-2 {
   display: none; }
 
 #footer.footer-2, #footer.footer-3 {
@@ -5202,6 +5202,12 @@ p {
     padding: 4.4rem 0 2rem; }
   #footer.footer-4 #footer-copyright .cms-page-link {
     display: none; }
+
+#footer.footer-5 .footer-main {
+  padding-top: 4.8rem; }
+
+#footer.footer-5 .html-1 p {
+  padding-right: 3rem; }
 
 #footer {
   width: 100%;
