--- a/themes/jms_molla/assets/css/demo-6.css
+++ b/themes/jms_molla/assets/css/demo-6.css
@@ -569,6 +569,11 @@ a:focus {
 .productbox-2 .out-text {
   color: #c96; }
 
+.productbox-4 .product-action .product-btn {
+  color: #c96; }
+  .productbox-4 .product-action .product-btn:hover {
+    border-color: #c96; }
+
 .h3-product-carousel .owl-carousel .owl-nav button::before {
   color: #c96; }
 
@@ -1147,6 +1152,11 @@ a:focus {
 
 /* Fonts */
 /* font-family: 'Poppins', sans-serif; */
+.pb-heading.title {
+  font-weight: 600;
+  letter-spacing: -.025em;
+  text-transform: uppercase; }
+
 .slider-text-center .gdz-slider-wrapper .gdz-slide-content {
   width: 100%; }
 
@@ -1170,5 +1180,138 @@ a:focus {
   .slider-text-center .btn:hover {
     color: #c96;
     background-color: #fff; }
+
+.pb-banner .pb-banner-text {
+  display: block;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  bottom: auto; }
+  .pb-banner .pb-banner-text .pb-banner-subtitle {
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    margin-bottom: .9rem;
+    display: block; }
+  .pb-banner .pb-banner-text .pb-banner-title {
+    font-weight: 600;
+    font-size: 2.4rem;
+    line-height: 1.13;
+    margin-bottom: 2.6rem;
+    letter-spacing: -.025em;
+    text-transform: uppercase;
+    color: #fff; }
+  .pb-banner .pb-banner-text .btn {
+    padding-top: 1.45rem;
+    padding-bottom: 1.45rem;
+    font-size: 1.3rem;
+    letter-spacing: .1em;
+    min-width: 130px;
+    border: none;
+    border-bottom: .2rem solid #fff;
+    color: #fff;
+    text-transform: uppercase; }
+    .pb-banner .pb-banner-text .btn:hover {
+      color: #333;
+      background-color: #fff;
+      border-color: #fff; }
+    .pb-banner .pb-banner-text .btn i {
+      display: none; }
+
+.pb-categorytab .nav.nav-tabs .nav-item .nav-link, .pb-producttab .nav.nav-tabs .nav-item .nav-link {
+  font-size: 1.3rem;
+  letter-spacing: .05em;
+  border: none;
+  padding-top: .35rem;
+  padding-bottom: .35rem;
+  position: relative;
+  color: #333; }
+  .pb-categorytab .nav.nav-tabs .nav-item .nav-link.active, .pb-producttab .nav.nav-tabs .nav-item .nav-link.active {
+    color: #333; }
+  .pb-categorytab .nav.nav-tabs .nav-item .nav-link:hover::before, .pb-producttab .nav.nav-tabs .nav-item .nav-link:hover::before {
+    -webkit-transform-origin: left center;
+    -ms-transform-origin: left center;
+    transform-origin: left center;
+    -webkit-transform: scale(1, 1);
+    -ms-transform: scale(1, 1);
+    transform: scale(1, 1); }
+  .pb-categorytab .nav.nav-tabs .nav-item .nav-link::before, .pb-producttab .nav.nav-tabs .nav-item .nav-link::before {
+    height: .2rem;
+    background-color: #333; }
+
+.deal .container {
+  max-width: 484px; }
+
+.deal .deal-subtitle {
+  color: #c96;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: .05em;
+  text-transform: uppercase; }
+
+.deal .deal-title {
+  font-weight: 600;
+  line-height: 1.1;
+  letter-spacing: -.025em;
+  text-transform: uppercase; }
+
+.deal .pb-countdown {
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px; }
+  .deal .pb-countdown .countdown-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .deal .pb-countdown .countdown-section {
+    min-width: 80px;
+    position: relative;
+    font-size: 1.2rem;
+    line-height: 1;
+    padding: 1.6rem 0;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 0;
+    background-color: transparent; }
+    .deal .pb-countdown .countdown-section:not(:last-child):after {
+      color: #333333;
+      content: ':';
+      display: inline-block;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1;
+      position: absolute;
+      left: 100%;
+      margin-left: 8px;
+      margin-top: -1px;
+      top: 40%;
+      -webkit-transform: translateY(-50%);
+      transform: translateY(-50%);
+      -ms-transform: translateY(-50%); }
+  .deal .pb-countdown .countdown-period {
+    display: block;
+    font-weight: 400;
+    font-size: 1.3rem;
+    letter-spacing: 0;
+    color: #666;
+    text-transform: lowercase;
+    width: 100%;
+    padding-left: .2rem;
+    padding-right: .2rem;
+    white-space: nowrap;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis; }
+  .deal .pb-countdown .countdown-amount {
+    display: inline-block;
+    color: #c96;
+    font-weight: 400;
+    font-size: 2.4rem;
+    letter-spacing: -.025em;
+    margin-bottom: .4rem; }
 
 /*# sourceMappingURL=demo-6.css.map */
