--- a/themes/jms_molla/assets/css/product-list.css
+++ b/themes/jms_molla/assets/css/product-list.css
@@ -645,9 +645,9 @@
     visibility: visible;
 }
 .product-buttons .btn-icon {
-	width: 30px;
-	height: 30px;
-	border: 1px solid #ebebeb;
+	width: 3rem;
+	height: 3rem;
+	border: .1rem solid #ebebeb;
 	border-radius: 50%;
 	background-color: #fff;
 	text-align: center;
@@ -655,15 +655,15 @@
 	display: block;
     font-size: 1.6rem;
     margin-bottom: 10px;
-    transition: all 400ms;
-	-webkit-transition: all 400ms;
-	-moz-transition: all 400ms;
-	-ms-transition: all 400ms;
-	-o-transition: all 400ms;
+    transition: all 350ms ease;
+	-webkit-transition: all 350ms ease;
+	-moz-transition: all 350ms ease;
+	-ms-transition: all 350ms ease;
+	-o-transition: all 350ms ease;
 }
 .product-buttons .btn-icon:hover{
 	color: #fff;
-	border-radius: 0 30px 30px 0;
+	border-radius: 0 3rem 3rem 0;
 }
 .product-buttons .btn-icon span{
 	display: inline-flex;
