--- a/themes/jms_molla/assets/scss/demos/demo-6.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-6.scss
@@ -10,6 +10,12 @@ $primary-color: #c96;
 @import '../config/fonts';
 @import '../config/variables';
 
+
+.pb-heading.title {
+	font-weight: 600;
+	letter-spacing: -.025em;
+	text-transform: uppercase;
+}
 .slider-text-center{
 	.gdz-slider-wrapper{
 		.gdz-slide-content{
@@ -37,5 +43,153 @@ $primary-color: #c96;
 			color: $primary-color;
 			background-color: #fff;
 		}
+	}
+}
+
+.pb-banner{
+	.pb-banner-text{
+		display: block;
+		top: 50%;
+		transform: translateY(-50%);
+		bottom: auto;
+		.pb-banner-subtitle{
+			font-size: 1.3rem;
+			font-weight: 400;
+			color: #fff;
+			text-transform: uppercase;
+			letter-spacing: .05em;
+			margin-bottom: .9rem;
+			display: block;
+		}
+		.pb-banner-title{
+			font-weight: 600;
+			font-size: 2.4rem;
+			line-height: 1.13;
+			margin-bottom: 2.6rem;
+			letter-spacing: -.025em;
+			text-transform: uppercase;
+			color: #fff;
+		}
+		.btn{
+			padding-top: 1.45rem;
+			padding-bottom: 1.45rem;
+			font-size: 1.3rem;
+			letter-spacing: .1em;
+			min-width: 130px;
+			border: none;
+			border-bottom: .2rem solid #fff;
+			color: #fff;
+			text-transform: uppercase;
+			&:hover{
+				color: #333;
+				background-color: #fff;
+				border-color: #fff;
+			}
+			i{
+				display: none;
+			}
+		}
+	}
+}
+
+.pb-categorytab, .pb-producttab{
+	.nav.nav-tabs .nav-item .nav-link{
+		font-size: 1.3rem;
+		letter-spacing: .05em;
+		border: none;
+		padding-top: .35rem;
+		padding-bottom: .35rem;
+		position: relative;
+		color: #333;
+		&.active{
+			color: #333;
+		}
+		&:hover::before{
+			transform-origin: left center;
+			transform: scale(1, 1);
+		}
+		&::before{
+			height: .2rem;
+			background-color: #333;
+		}
+	}
+}
+
+.deal{
+	.container{
+		max-width: 484px;
+	}
+	.deal-subtitle{
+		color: #c96;
+		font-weight: 400;
+		line-height: 1.3;
+		letter-spacing: .05em;
+		text-transform: uppercase;
+	}
+	.deal-title{
+		font-weight: 600;
+		line-height: 1.1;
+		letter-spacing: -.025em;
+		text-transform: uppercase;
+	}
+	.pb-countdown {
+		margin-bottom: 2rem;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 300px;
+		.countdown-row{
+			display: flex;
+		}
+		.countdown-section {
+			min-width: 80px;
+			position: relative;
+			font-size: 1.2rem;
+			line-height: 1;
+			padding: 1.6rem 0;
+			margin-left: 1rem;
+			margin-right: 1rem;
+			border-radius: 0;
+			background-color: transparent;
+
+			&:not(:last-child):after {
+				color: #333333;
+			    content: ':';
+			    display: inline-block;
+			    font-weight: 500;
+			    font-size: 20px;
+			    line-height: 1;
+			    position: absolute;
+			    left: 100%;
+			    margin-left: 8px;
+			    margin-top: -1px;
+			    top: 40%;
+			    transform: translateY(-50%);
+			    -ms-transform: translateY(-50%);
+			}
+		}
+
+		.countdown-period {
+			display: block;
+			font-weight: 400;
+			font-size: 1.3rem;
+			letter-spacing: 0;
+			color: #666;
+			text-transform: lowercase;
+			width: 100%;
+			padding-left: .2rem;
+			padding-right: .2rem;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+
+		.countdown-amount {
+			display: inline-block;
+			color: $primary-color;
+			font-weight: 400;
+			font-size: 2.4rem;
+			letter-spacing: -.025em;
+			margin-bottom: .4rem;
+		}	
 	}
 }
