--- a/themes/jms_molla/assets/scss/skins/_skin.scss
+++ b/themes/jms_molla/assets/scss/skins/_skin.scss
@@ -530,6 +530,12 @@ a:focus {
         color: $primary-color;
     }
 }
+.productbox-4 .product-action .product-btn{
+    color: $primary-color;
+    &:hover{
+        border-color: $primary-color;
+    }
+}
 .h3-product-carousel .owl-carousel .owl-nav button::before{
     color: $primary-color;
 }
